--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,1 +1,9 @@
-{% include nav.html %}
+
+<nav>
+	<ul>
+		<li><a href="/index.html">Inicio</a></li>
+		<li><a href="/poemas.html">Poemas</a></li>
+		<li><a href="/peliculas.html">Películas</a></li>
+		<li><a href="/about.html">Acerca de</a></li>
+	</ul>
+</nav>
