--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,3 @@
 {% include nav.html %}
-<link rel="stylesheet" href="/assets/css/custom.css">
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 {{ content }}
