--- a/_layouts/poema.html
+++ b/_layouts/poema.html
@@ -11,6 +11,6 @@ layout: default
     <p class="fecha" style="color:#888; margin-top:0; margin-bottom:1.5em; font-size:1.1em;">{{ page.date | date: "%Y" }}</p>
   {% endif %}
   <div class="poema-text" style="margin-top:2em; color:#222; font-size:1.25em; white-space:pre-line; font-family:'Georgia',serif; line-height:1.7;">
-    {{ page.content | strip_html }}
+  {{ page.content }}
   </div>
 </div>
