--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,19 @@
+<head>
+	<meta charset="utf-8">
+	<title>{{ page.title | default: site.title }}</title>
+	<meta name="description" content="{{ page.excerpt | default: site.description }}">
+	<meta property="og:title" content="{{ page.title | default: site.title }}" />
+	<meta property="og:description" content="{{ page.excerpt | default: site.description }}" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="{{ page.url | absolute_url }}" />
+	<meta property="og:image" content="{{ page.image | default: site.image | absolute_url }}" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="{{ page.title | default: site.title }}" />
+	<meta name="twitter:description" content="{{ page.excerpt | default: site.description }}" />
+	<meta name="twitter:image" content="{{ page.image | default: site.image | absolute_url }}" />
+	<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+</head>
+<body>
 {% include nav.html %}
-<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 {{ content }}
+</body>
