--- a/_layouts/pelicula.html
+++ b/_layouts/pelicula.html
@@ -21,6 +21,7 @@ layout: default
   </div>
   <div class="pelicula-review">
     {{ content }}
+  <div class="pelicula-autor" style="margin-top:2em; color:#888; font-size:0.98em; text-align:right;">Autor: <a href="https://www.instagram.com/cwolf_imc/" target="_blank" rel="noopener" style="color:#0056b3; text-decoration:none;">Carlos Wolf</a></div>
   </div>
 </div>
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/pelicula.css">
