--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,4 +16,9 @@
 <body>
 {% include nav.html %}
 {{ content }}
-</body>
+<footer style="text-align:center; color:#888; font-size:0.95em; margin-top:3em; padding-bottom:2em;">
+	<span>
+		Todo el contenido de este sitio está bajo una <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener" style="color:#0056b3;">Licencia Creative Commons Atribución 4.0 Internacional</a>.<br>
+		Autor: <a href="https://www.instagram.com/cwolf_imc/" target="_blank" rel="noopener" style="color:#0056b3; text-decoration:none;">Carlos Wolf</a>
+	</span>
+</footer>
