--- a/_layouts/poema.html
+++ b/_layouts/poema.html
@@ -12,5 +12,6 @@ layout: default
   {% endif %}
   <div class="poema-text" style="margin-top:2em; color:#222; font-size:1.25em; white-space:pre-line; font-family:'Georgia',serif; line-height:1.7;">
   {{ page.content }}
+  <div class="poema-autor" style="margin-top:2em; color:#888; font-size:0.98em; text-align:right;">Autor: <a href="https://www.instagram.com/cwolf_imc/" target="_blank" rel="noopener" style="color:#0056b3; text-decoration:none;">Carlos Wolf</a></div>
   </div>
 </div>
