--- a/_layouts/poema_custom.html
+++ b/_layouts/poema_custom.html
@@ -32,5 +32,6 @@ layout: default
     {% else %}
       {{ page.content }}
     {% endif %}
+  <div class="poema-autor" style="margin-top:2em; color:#888; font-size:0.98em; text-align:right;">Autor: <a href="https://www.instagram.com/cwolf_imc/" target="_blank" rel="noopener" style="color:#0056b3; text-decoration:none;">Carlos Wolf</a></div>
   </div>
 </div>
