Error menor de ruteo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 	<meta name="twitter:description" content="{{ page.excerpt | strip_html | default: site.description }}" />
 	<meta name="twitter:image" content="{{ page.image | default: site.image | absolute_url }}" />
 	<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+	<link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
 </head>
 <body>
 {% include nav.html %}
