Boton Next y Anteriori

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,3 +23,6 @@
 		Autor: <a href="https://www.instagram.com/cwolf_imc/" target="_blank" rel="noopener" style="color:#0056b3; text-decoration:none;">Carlos Wolf</a>
 	</span>
 </footer>
+
+
+</body>
