--- a/_layouts/pelicula.html
+++ b/_layouts/pelicula.html
@@ -24,4 +24,5 @@ layout: default
   <div class="pelicula-autor" style="margin-top:2em; color:#888; font-size:0.98em; text-align:right;">Autor: <a href="https://www.instagram.com/cwolf_imc/" target="_blank" rel="noopener" style="color:#0056b3; text-decoration:none;">Carlos Wolf</a></div>
   </div>
 </div>
+{% include next-button.html %}
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/pelicula.css">
