--- a/_layouts/poema.html
+++ b/_layouts/poema.html
@@ -48,4 +48,7 @@ layout: default
     </style>
   <div class="poema-autor" style="margin-top:2em; color:#888; font-size:0.98em; text-align:right;">Autor: <a href="https://www.instagram.com/cwolf_imc/" target="_blank" rel="noopener" style="color:#0056b3; text-decoration:none;">Carlos Wolf</a></div>
   </div>
+<div>
+  {% include next-button.html %}
+</div>
 </div>
