--- a/_layouts/poema_custom.html
+++ b/_layouts/poema_custom.html
@@ -26,6 +26,8 @@ layout: default
               <div style="text-align:left;">{{ line }}</div>
             {% endfor %}
           </div>
+        {% elsif p.alineamiento == "vertical" %}
+          <div style="writing-mode:vertical-rl; transform: rotate(180deg); margin:2em auto; font-size:1.1em; text-align:center; max-height:320px; overflow:auto;">{{ p.texto }}</div>
         {% else %}
           <div style="margin-bottom:2em;">{{ p.texto }}</div>
         {% endif %}
