--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,10 +2,11 @@
 
 <nav>
 	<ul>
-		<li><a href="{{ site.baseurl }}/">Inicio</a></li>
-		<li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
-		<li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
-		<li><a href="{{ site.baseurl }}/about">Acerca de</a></li>
+	<li><a href="{{ site.baseurl }}/">Inicio</a></li>
+	<li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
+	<li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
+	<li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
+	<li><a href="{{ site.baseurl }}/about">Acerca de</a></li>
 			<li>
 				<a href="{{ '/feed.xml' | relative_url }}" title="RSS general" class="rss-link">
 					<svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
