--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,7 @@
 <nav>
 	<ul>
 	<li><a href="{{ site.baseurl }}/">Inicio</a></li>
+	<li><a href="{{ site.baseurl }}/critica">Crítica</a></li>
 	<li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
 	<li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
 	<li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
