--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,9 @@
 	<meta name="twitter:title" content="{{ page.title | default: site.title }}" />
 	<meta name="twitter:description" content="{{ page.excerpt | strip_html | default: site.description }}" />
 	<meta name="twitter:image" content="{{ page.image | default: site.image | absolute_url }}" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+	<link rel="stylesheet" href="{{ '/assets/css/ensayos-lista.css' | relative_url }}">
 	<link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
 	
 </head>
