--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,31 +1,31 @@
-
-
 <nav>
-	<ul>
-	<li><a href="{{ site.baseurl }}/">Inicio</a></li>
-	<li><a href="{{ site.baseurl }}/ensayos">Ensayos</a></li>
-	<li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
-	<li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
-	<li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
-	<li><a href="{{ site.baseurl }}/libros">Libros</a></li>
-	<li><a href="{{ site.baseurl }}/about">Acerca de</a></li>
-			<li>
-				<a href="{{ '/feed.xml' | relative_url }}" title="RSS general" class="rss-link">
-					<svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
-						<circle cx="6.18" cy="17.82" r="2.18" fill="#ff6600"/>
-						<path d="M4 11c5 0 9 4 9 9" stroke="#ff6600" stroke-width="2.5" stroke-linecap="round"/>
-						<path d="M4 4c9.4 0 17 7.6 17 17" stroke="#ff6600" stroke-width="2.5" stroke-linecap="round"/>
-					</svg>
-				</a>
-			</li>
-			<li>
-				<a href="{{ '/feed-poemas.xml' | relative_url }}" title="RSS Poemas" class="rss-link">
-					<svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
-						<circle cx="6.18" cy="17.82" r="2.18" fill="#0056b3"/>
-						<path d="M4 11c5 0 9 4 9 9" stroke="#0056b3" stroke-width="2.5" stroke-linecap="round"/>
-						<path d="M4 4c9.4 0 17 7.6 17 17" stroke="#0056b3" stroke-width="2.5" stroke-linecap="round"/>
-					</svg>
-				</a>
-			</li>
-	</ul>
+  <ul>
+    <li><a href="{{ site.baseurl }}/">Inicio</a></li>
+    <li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
+    <li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
+    <li><a href="{{ site.baseurl }}/libros">Libros</a></li>
+    <li><a href="{{ site.baseurl }}/ensayos">Ensayos</a></li>
+    <li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
+    <li><a href="{{ site.baseurl }}/about">Acerca de</a></li>
+    <li>
+      <a href="{{ '/feed.xml' | relative_url }}" title="RSS General" class="rss-link">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
+          <circle cx="6.18" cy="17.82" r="2.18" fill="#ff6600"/>
+          <path d="M4 11c5 0 9 4 9 9" stroke="#ff6600" stroke-width="2.5" stroke-linecap="round"/>
+          <path d="M4 4c9.4 0 17 7.6 17 17" stroke="#ff6600" stroke-width="2.5" stroke-linecap="round"/>
+        </svg>
+        Feed General
+      </a>
+    </li>
+    <li>
+      <a href="{{ '/feed-poemas.xml' | relative_url }}" title="RSS Poemas" class="rss-link" style="border-color:#0056b3;">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
+          <circle cx="6.18" cy="17.82" r="2.18" fill="#0056b3"/>
+          <path d="M4 11c5 0 9 4 9 9" stroke="#0056b3" stroke-width="2.5" stroke-linecap="round"/>
+          <path d="M4 4c9.4 0 17 7.6 17 17" stroke="#0056b3" stroke-width="2.5" stroke-linecap="round"/>
+        </svg>
+        Feed Poemas
+      </a>
+    </li>
+  </ul>
 </nav>
