--- a/_layouts/bitmap-halftone.html
+++ b/_layouts/bitmap-halftone.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% include nav.html %}
 <link rel="stylesheet" href="{{ '/assets/css/bitmap-halftone.css' | relative_url }}">
 
 <div class="container" style="max-width:800px; margin:40px auto;
