--- a/_layouts/pelicula.html
+++ b/_layouts/pelicula.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+{% include nav.html %}
 <div class="container pelicula-individual">
   <h1 class="pelicula-title">{{ page.title }} <span class="pelicula-year">({{ page.year }})</span></h1>
   {% if page.poster %}
