--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
     <li><a href="{{ site.baseurl }}/">Inicio</a></li>
     <li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
     <li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
-    <li><a href="{{ site.baseurl }}/libros">Libros</a></li>
+	<!-- <li><a href="{{ site.baseurl }}/libros">Libros</a></li> -->
     <li><a href="{{ site.baseurl }}/ensayos">Ensayos</a></li>
     <li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
     <li><a href="{{ site.baseurl }}/about">Acerca de</a></li>
